src/objects/Case.object
<CustomObject>
    <businessProcesses>
        <fullName>Campaign Project</fullName>
        <description>Campaign Project Milestone</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Campaign Workflow</fullName>
        <description>Campaign Workflow Case Process</description>
        <isActive>true</isActive>
        <values>
            <fullName>Active</fullName>
        </values>
        <values>
            <fullName>Completed</fullName>
        </values>
        <values>
            <fullName>Not Started</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Ready to Start</fullName>
        </values>
        <values>
            <fullName>Rejected</fullName>
        </values>
        <values>
            <fullName>Submitted for Approval</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Anchored__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Anchored</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is created as part of US1397. If this field is true it means this case is a Approval task.</description>
        <label>Approval Case?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approver_Role__c</fullName>
        <label>Approver Role</label>
        <picklist>
            <picklistValues>
                <fullName>POD Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Support Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email QA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Proforma__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to create a relationship between the case and proforma. 

ref: US1397</description>
        <label>Associated Proforma</label>
        <referenceTo>Proforma__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>ProformaCase</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Formula__c</fullName>
        <formula>Campaign_Project__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Project</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project_Record_Type_Workflow__c</fullName>
        <formula>Campaign_Project__r.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Project Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Project</label>
        <referenceTo>Campaign_Project__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Case_Sub_Group__c</fullName>
        <label>Case Sub-Group</label>
        <picklist>
            <picklistValues>
                <fullName>Project Kick Off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Direct Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Project Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tier 3 Prod Studio Content Development &amp; Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Close Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Tier 1 Content Development and Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Content and Design Project Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Content Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Content Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Content Review &amp; Deploy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Design Copy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital QA and Close Out</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Content Merchandising</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Case_QuickAction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Close Case QuickAction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Close_Status__c</fullName>
        <label>Close Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Controlling_Anchored_Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be used to associate a case to an anchored case</description>
        <label>Controlling Anchored Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Controlling Anchored Type</relationshipLabel>
        <relationshipName>ControllingAnchored</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Controlling_Anchored_Type__c</fullName>
        <description>- determines the start date and end date of the record based on the respective anchored date.</description>
        <label>Controlling Anchored Type</label>
        <picklist>
            <picklistValues>
                <fullName>Review Pro Forma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drop Mail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Execute Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prepare &amp; Deploy Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vendor Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Revisions and Push Live</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Requestor Confirms Receipt of Deliverables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approve Pro Forma</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DMC_Workflow__c</fullName>
        <formula>TEXT(Campaign_Project__r.Direct_Marketing_Center__r.DMC_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DMC</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dependencies__c</fullName>
        <label>Dependencies</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Assignment__c</fullName>
        <description>Escalation Assignment</description>
        <inlineHelpText>Escalation Assignment</inlineHelpText>
        <label>Escalation Assignment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Approval_Timestamp__c</fullName>
        <label>Final Approval Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Final_Approver__c</fullName>
        <label>Final Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_User_Assignment_Date__c</fullName>
        <description>Timestamp of when the case owner changed from a queue to an individual user</description>
        <inlineHelpText>Timestamp of when the case owner changed from a queue to an individual user</inlineHelpText>
        <label>First User Assignment Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intermediate_Approval_1_Timestamp__c</fullName>
        <label>Intermediate Approval 1 Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intermediate_Approval_2_Timestamp__c</fullName>
        <label>Intermediate Approval 2 Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Intermediate_Approver_1__c</fullName>
        <label>Intermediate Approver 1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intermediate_Approver_2__c</fullName>
        <label>Intermediate Approver 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Rejected_By__c</fullName>
        <label>Item Rejected By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Item_Rejection_Timestamp__c</fullName>
        <label>Item Rejection Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Milestone_Violated__c</fullName>
        <description>the name of the milestone that violated most recently</description>
        <inlineHelpText>the name of the milestone that violated most recently</inlineHelpText>
        <label>Last Milestone Violated</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Task_Code__c</fullName>
        <label>Legacy Task Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_DM_Drop_Date__c</fullName>
        <description>DM Drop Date milestone status</description>
        <inlineHelpText>DM Drop Date milestone status</inlineHelpText>
        <label>MS DM Drop Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Email_Drop_Date__c</fullName>
        <description>Email Drop Date milestone status</description>
        <inlineHelpText>Email Drop Date milestone status</inlineHelpText>
        <label>MS Email Drop Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Email_Job_Complete__c</fullName>
        <description>Email Job Complete milestone status</description>
        <inlineHelpText>Email Job Complete milestone status</inlineHelpText>
        <label>MS Email Job Complete</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Email_Job_Start__c</fullName>
        <description>Email Job Start milestone status</description>
        <inlineHelpText>Email Job Start milestone status</inlineHelpText>
        <label>MS Email Job Start</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Email_Proof_Approved__c</fullName>
        <description>Email Proof Approved milestone status</description>
        <inlineHelpText>Email Proof Approved milestone status</inlineHelpText>
        <label>MS Email Proof Approved</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_POD_Submitted_Job__c</fullName>
        <description>POD Submitted Job milestone status</description>
        <inlineHelpText>POD Submitted Job milestone status</inlineHelpText>
        <label>MS POD Submitted Job</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Proforma_Approved__c</fullName>
        <description>Proforma Approved milestone status</description>
        <inlineHelpText>Proforma Approved milestone status</inlineHelpText>
        <label>MS Proforma Approved</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_R_R_Approved__c</fullName>
        <description>Milestone status MS R&amp;R Approved</description>
        <inlineHelpText>Milestone status MS R&amp;R Approved</inlineHelpText>
        <label>MS R&amp;R Approved</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Standard_Project_Kickoff__c</fullName>
        <description>Milestone Standard Project Kickoff status</description>
        <inlineHelpText>Milestone Standard Project Kickoff status</inlineHelpText>
        <label>MS Standard Project Kickoff</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Std_Campaign_Project_Complete__c</fullName>
        <description>Campaign Project Complete milestone status</description>
        <inlineHelpText>Campaign Project Complete milestone status</inlineHelpText>
        <label>MS Campaign Project Complete</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Studio_Art_Approved__c</fullName>
        <description>Status of milestone Studio Art Approved Due</description>
        <inlineHelpText>Status of milestone Studio Art Approved Due</inlineHelpText>
        <label>MS Studio Art Approved</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSS_Studio_Job_Complete__c</fullName>
        <description>Status of milestone Studio Job Complete</description>
        <inlineHelpText>Status of milestone Studio Job Complete</inlineHelpText>
        <label>MS Studio Job Complete</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MS_DM_Drop_Date__c</fullName>
        <description>Target Due date for the milestone DM Drop Date</description>
        <inlineHelpText>Target Due date for the milestone DM Drop Date</inlineHelpText>
        <label>MS DM Drop Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Email_Drop_Date__c</fullName>
        <description>Target Due date for the milestone Email Drop Date</description>
        <inlineHelpText>Target Due date for the milestone Email Drop Date</inlineHelpText>
        <label>MS Email Drop Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Email_Job_Complete__c</fullName>
        <description>Target Due date for the milestone Email Job Complete</description>
        <inlineHelpText>Target Due date for the milestone Email Job Complete</inlineHelpText>
        <label>MS Email Job Complete Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Email_Job_Start__c</fullName>
        <description>Target Due date for the milestone Email Job Start</description>
        <inlineHelpText>Target Due date for the milestone Email Job Start</inlineHelpText>
        <label>MS Email Job Start Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Email_Proof_Approved__c</fullName>
        <description>Target Due date for the milestone Email Proof Approved</description>
        <inlineHelpText>Target Due date for the milestone Email Proof Approved</inlineHelpText>
        <label>MS Email Proof Approved Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_POD_Submitted_Job__c</fullName>
        <description>Target Due date for the milestone POD Submitted Job</description>
        <inlineHelpText>Target Due date for the milestone POD Submitted Job</inlineHelpText>
        <label>MS POD Submitted Job Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Proforma_Approved__c</fullName>
        <description>Timestamp for the due date of the milestone Proforma Approved</description>
        <inlineHelpText>Timestamp for the due date of the milestone Proforma Approved</inlineHelpText>
        <label>MS Proforma Approved Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_R_R_Approved__c</fullName>
        <description>Timestamp for the due date of the milestone R&amp;R Approved</description>
        <inlineHelpText>Timestamp for the due date of the milestone R&amp;R Approved</inlineHelpText>
        <label>MS R&amp;R Approved Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Standard_Campaign_Project_Complete__c</fullName>
        <description>Timestamp for the due date of milestone Standard Campaign Project Complete</description>
        <inlineHelpText>Timestamp for the due date of milestone Standard Campaign Project Complete</inlineHelpText>
        <label>MS Campaign Project Complete Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Standard_Project_Kickoff__c</fullName>
        <description>Target Due date for the milestone Standard Project Kickoff</description>
        <inlineHelpText>Target Due date for the milestone Standard Project Kickoff</inlineHelpText>
        <label>MS Standard Project Kickoff Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Studio_Art_Approved__c</fullName>
        <description>Timestamp of the due date for milestone Studio Art Approved</description>
        <inlineHelpText>Timestamp of the due date for milestone Studio Art Approved</inlineHelpText>
        <label>MS Studio Art Approved Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>MS_Studio_Job_Complete__c</fullName>
        <description>Timestamp of the due date for milestone Studio Job Complete</description>
        <inlineHelpText>Timestamp of the due date for milestone Studio Job Complete</inlineHelpText>
        <label>MS Studio Job Complete Due</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Market_Workflow__c</fullName>
        <formula>Campaign_Project__r.Market__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Role_Queue_Derivation__c</fullName>
        <inlineHelpText>Definition of how Member Role Queues are derived from Campaign Project. For generic queues like Database Analyst, choose Generic.</inlineHelpText>
        <label>Member Role Queue Derivation</label>
        <picklist>
            <picklistValues>
                <fullName>Market</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Generic</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Member_Role__c</fullName>
        <label>Member Role</label>
        <picklist>
            <picklistValues>
                <fullName>POD Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing Campaign Associate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Analyst</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Property Marketer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Account Executive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Tier 3 Production Artist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Copywriter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Email</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <description>The workflow case is identified as a campaign milestone</description>
        <inlineHelpText>The workflow case is identified as a campaign milestone</inlineHelpText>
        <label>Campaign Milestone</label>
        <picklist>
            <picklistValues>
                <fullName>AEM Files Packaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM Files to Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AEM Layout Built</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Counts Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Drop Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EA Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Drop Date</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Proof Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pod Submitted Job</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proforma Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>R&amp;R Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Art Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Job Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Studio Job Start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Project Kickoff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard Campaign Project Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pending_Approval_Duration_Left__c</fullName>
        <label>Pending Approval Duration Left</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Pending_Approver__c</fullName>
        <label>Pending Approver</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planning_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Planning Task?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Predecessor_Task_To_Anchored_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be true if the Task is a Predecessor(task to be done before Associated Anchored case). This field will be false if it is Anchored task.</description>
        <label>Predecessor Task To Anchored Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <description>This field is to capture whether the project type is CP/ Proforma. Was created part of US1398</description>
        <label>Item To Approve</label>
        <picklist>
            <picklistValues>
                <fullName>Campaign Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proforma</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ready_To_Start_Date__c</fullName>
        <description>The timestamp when the case is first marked as ready to start</description>
        <inlineHelpText>The timestamp when the case is first marked as ready to start</inlineHelpText>
        <label>Ready To Start Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Scheduled_Through__c</fullName>
        <label>Scheduled Through</label>
        <picklist>
            <picklistValues>
                <fullName>Bus.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wkd.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Successor_Task_To_Anchored_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be true if the Task is a successor(task to be done before Associated Anchored case). This field will be false if it is Anchored task.</description>
        <label>Successor Task To Anchored Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Target_Duration_Days__c</fullName>
        <label>Target Duration - Days</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Duration_Hours__c</fullName>
        <label>Target Duration - Hours</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_Duration_Minutes__c</fullName>
        <label>Target Duration - Minutes</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Target_End_Date__c</fullName>
        <label>Target End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Start_Date__c</fullName>
        <label>Target Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Code__c</fullName>
        <displayFormat>WFC-{000000}</displayFormat>
        <label>Task Code</label>
        <type>AutoNumber</type>
    </fields>
    <listViews>
        <fullName>ACM_Marketing_Campaign_Associate_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACM - Marketing Campaign Associate</label>
        <queue>ACM_Marketing_Campaign_Associate</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ACM_POD_Manaer_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACM - POD Manager</label>
        <queue>ACM_POD_Manager</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_Analytics_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>ACM - Analytics</label>
        <queue>ACM_Analytics</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_DMC_Associate_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - DMC Associate</label>
        <queue>AC_DMC_Associate</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_DMC_Manager_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - DMC Manager</label>
        <queue>AC_DMC_Manager</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_DMC_Supervisor_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - DMC Supervisor</label>
        <queue>AC_DMC_Supervisor</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_Decision_Support_Manager_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - Decision Support Manager</label>
        <queue>AC_Decision_Support_Manager</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AC_Property_Marketer_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>AC - Property Marketer</label>
        <queue>AC_Property_Marketer</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>Case_Sub_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>All_Workflow_Instance_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Sub_Group__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Campaign_Workflow_Instance</value>
        </filters>
        <label>All Workflow Instance Cases</label>
    </listViews>
    <listViews>
        <fullName>Approval_Tasks</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Campaign_Workflow_Template</value>
        </filters>
        <filters>
            <field>Approval_Case__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Approval Tasks</label>
    </listViews>
    <listViews>
        <fullName>Database_Analyst_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Database Analyst</label>
        <queue>Database_Analyst</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Email_Specialist_Case</fullName>
        <filterScope>Queue</filterScope>
        <label>Email Specialist</label>
        <queue>Email_Specialist</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MPE_Workflow_Template</fullName>
        <booleanFilter>1 AND (2 or 3 or 4)</booleanFilter>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>Controlling_Anchored_Case__c</columns>
        <columns>Target_Duration_Days__c</columns>
        <columns>Target_Duration_Hours__c</columns>
        <columns>Target_Duration_Minutes__c</columns>
        <columns>Anchored__c</columns>
        <columns>CASES.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Case.Campaign_Workflow_Template</value>
        </filters>
        <filters>
            <field>Predecessor_Task_To_Anchored_Case__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Successor_Task_To_Anchored_Case__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Anchored__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Workflow Template Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
</CustomObject>